--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.timmy.hiltmvvm"
+        applicationId "com.timmy.pluscoupon"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
