--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.timmy.hiltmvvm">
+    package="com.timmy.pluscoupon">
 
     <application
-        android:name=".application.SampleApplication"
+        android:name="com.timmy.pluscoupon.application.CheckApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HiltMVVM">
+        android:theme="@style/Theme.PlusCoupon">
         <activity
-            android:name=".ui.SampleActivity"
+            android:name="com.timmy.pluscoupon.ui.CheckActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
